Div bugfixes
